# rsvg-rs

./: Cargo.toml
rsvg-sys/: Cargo.toml
rsvg-sys/src/: lib.rs
rsvg-sys/tests/: abi.rs  constant.c  layout.c
