[package]
name = "rsvg"
version = "0.4.0"
authors = ["selaux"]
description = "Rust bindings for the Rsvg library"
repository = "https://github.com/selaux/rsvg-rs"
license = "MIT"

keywords = ["rsvg", "svg", "gtk-rs"]
include = ["src/**/*", "Cargo.toml"]

[lib]
name = "rsvg"

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = { git = "https://github.com/gtk-rs/glib.git" }
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys.git" }
gdk-pixbuf = { git = "https://github.com/gtk-rs/gdk-pixbuf.git" }

[dev-dependencies]
image = "0.18.0"
imageproc = "0.14.0"
gtk = { git = "https://github.com/gtk-rs/gtk.git" }

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo.git"
features = ["png"]

[dependencies.rsvg-sys]
version = "0.6.0"
path = "./rsvg-sys"
