[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.atk-sys]
git = "https://github.com/gtk-rs/sys.git"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo.git"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/sys.git"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys.git"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys.git"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys.git"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys.git"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/sys.git"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []

[lib]
name = "rsvg_sys"

[package]
authors = ["selaux"]
build = "build.rs"
description = "Rust bindings for the Rsvg library (ffi)"
license = "MIT"
links = "rsvg"
name = "rsvg-sys"
repository = "https://github.com/selaux/rsvg-rs"
version = "0.6.0"
